# gcp_vm

./: README.md  deploy.sh  docker-compose.yml  pyproject.toml
backend/: Dockerfile  database.py  requirements.txt  server.py
frontend/: Dockerfile  main.py  requirements.txt
