[project]
name = "gcp-vm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "pandas==2.1.3",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "sqlalchemy==2.0.23",
    "streamlit==1.28.0",
    "uvicorn[standard]==0.24.0",
]
